<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_Dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_Source"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/dest"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/labelDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_Dest"
        android:layout_alignBottom="@+id/textView_Dest"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView_Dest"
        android:text="@string/empty"
        android:textColor="@color/white" />
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_Dest"
        android:layout_alignLeft="@+id/labelDest"
        android:text="@string/empty"
        android:textColor="@color/white" />
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Dest"
        android:layout_below="@+id/labelDest"
        android:layout_marginTop="14dp"
        android:text="@string/available"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <include
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@layout/table_buses"
        android:layout_below="@+id/labelAvailable"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="23dp"
        layout="@layout/table_buses"
        android:fitsSystemWindows="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView_Source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Dest"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/source"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

</RelativeLayout>